--- a/src/static/html/index.html
+++ b/src/static/html/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="/css/style.css"> 
         <!-- Dependencies and Libraries -->
         <script src="https://pixijs.download/release/pixi.js"></script>
         <title>CSH Tower Defense</title>
