--- a/src/static/html/index.html
+++ b/src/static/html/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <!-- Load Primary Application -->
-        <script src="/js/game.js"></script>
+        <script type="module" src="/js/game.js"></script>
     </body>
 </html>
